@@ -1,9 +1,13 @@
 package it.pagopa.pn.stream.service.impl;
 
 import it.pagopa.pn.stream.config.PnStreamConfigs;
+import it.pagopa.pn.stream.dto.CommunicationType;
 import it.pagopa.pn.stream.exceptions.PnStreamForbiddenException;
 import it.pagopa.pn.stream.exceptions.PnStreamMaxStreamsCountReachedException;
-import it.pagopa.pn.stream.generated.openapi.server.v1.dto.*;
+import it.pagopa.pn.stream.generated.openapi.server.v1.dto.StreamCreationRequestV30;
+import it.pagopa.pn.stream.generated.openapi.server.v1.dto.StreamListElement;
+import it.pagopa.pn.stream.generated.openapi.server.v1.dto.StreamMetadataResponseV30;
+import it.pagopa.pn.stream.generated.openapi.server.v1.dto.StreamRequestV30;
 import it.pagopa.pn.stream.middleware.dao.dynamo.EventEntityDao;
 import it.pagopa.pn.stream.middleware.dao.dynamo.StreamEntityDao;
 import it.pagopa.pn.stream.middleware.dao.dynamo.entity.StreamEntity;
@@ -17,8 +21,6 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mockito;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.MediaType;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 import reactor.util.function.Tuples;
@@ -75,9 +77,9 @@ class StreamsServiceImplTest {
         String xpagopapnuid = "PA-xpagopapnuid";
 
 
-        StreamCreationRequestV29 req = new StreamCreationRequestV29();
+        StreamCreationRequestV30 req = new StreamCreationRequestV30();
         req.setTitle("titolo");
-        req.setEventType(StreamCreationRequestV29.EventTypeEnum.STATUS);
+        req.setEventType(StreamCreationRequestV30.EventTypeEnum.STATUS);
         req.setFilterValues(null);
 
         String uuid = UUID.randomUUID().toString();
@@ -105,7 +107,7 @@ class StreamsServiceImplTest {
 
 
         //WHEN
-        StreamMetadataResponseV29 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req)).block(d);
+        StreamMetadataResponseV30 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req)).block(d);
 
         //THEN
         assertNotNull(res);
@@ -121,10 +123,10 @@ class StreamsServiceImplTest {
         String xpagopapnuid = "PA-xpagopapnuid";
 
 
-        StreamCreationRequestV29 req = new StreamCreationRequestV29();
+        StreamCreationRequestV30 req = new StreamCreationRequestV30();
         req.setTitle("titolo");
-        req.setEventType(StreamCreationRequestV29.EventTypeEnum.TIMELINE);
-        req.setFilterValues(Arrays.asList("REQUEST_ACCEPTED"));
+        req.setEventType(StreamCreationRequestV30.EventTypeEnum.TIMELINE);
+        req.setFilterValues(List.of("REQUEST_ACCEPTED"));
         req.setWaitForAccepted(true);
 
         String uuid = UUID.randomUUID().toString();
@@ -152,7 +154,7 @@ class StreamsServiceImplTest {
 
 
         //WHEN
-        StreamMetadataResponseV29 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req)).block(d);
+        StreamMetadataResponseV30 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req)).block(d);
 
         //THEN
         assertNotNull(res);
@@ -162,16 +164,58 @@ class StreamsServiceImplTest {
     }
 
     @Test
+    void createEventStreamWithCommunicationType() {
+        String xpagopacxid = "PA-xpagopacxid";
+        String xpagopapnuid = "PA-xpagopapnuid";
+
+        StreamCreationRequestV30 req = new StreamCreationRequestV30();
+        req.setTitle("titolo");
+        req.setEventType(StreamCreationRequestV30.EventTypeEnum.STATUS);
+        req.setCommunicationType(StreamCreationRequestV30.CommunicationTypeEnum.INFORMAL);
+        req.setFilterValues(null);
+
+        String uuid = UUID.randomUUID().toString();
+        StreamEntity entity = new StreamEntity();
+        entity.setStreamId(uuid);
+        entity.setTitle(req.getTitle());
+        entity.setPaId(xpagopacxid);
+        entity.setEventType(req.getEventType().toString());
+        entity.setCommunicationType(CommunicationType.valueOf(req.getCommunicationType().getValue()));
+        entity.setFilterValues(new HashSet<>());
+        entity.setActivationDate(Instant.now());
+        entity.setSorting(Boolean.FALSE);
+
+        StreamEntity pentity = new StreamEntity();
+        pentity.setStreamId("2" + uuid);
+        pentity.setTitle(req.getTitle());
+        pentity.setPaId(xpagopacxid);
+        pentity.setEventType(req.getEventType().toString());
+        pentity.setFilterValues(new HashSet<>());
+        pentity.setActivationDate(Instant.now());
+
+        ArgumentCaptor<StreamEntity> captor = ArgumentCaptor.forClass(StreamEntity.class);
+        Mockito.when(streamEntityDao.findByPa(Mockito.anyString())).thenReturn(Flux.fromIterable(List.of(pentity)));
+        Mockito.when(streamEntityDao.save(captor.capture())).thenReturn(Mono.just(entity));
+        Mockito.when(streamUtils.retrieveMaxStreamsNumber(xpagopacxid)).thenReturn(maxStreams);
+
+        StreamMetadataResponseV30 res = webhookService.createEventStream(xpagopapnuid, xpagopacxid, null, null, Mono.just(req)).block(d);
+
+        assertNotNull(res);
+        assertEquals(StreamMetadataResponseV30.CommunicationTypeEnum.INFORMAL, res.getCommunicationType());
+        assertEquals(CommunicationType.INFORMAL, captor.getValue().getCommunicationType());
+    }
+
+    @Test
     void createSortEventStreamWithWrongFilter() {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
 
 
-        StreamCreationRequestV29 req = new StreamCreationRequestV29();
+        StreamCreationRequestV30 req = new StreamCreationRequestV30();
         req.setTitle("titolo");
-        req.setEventType(StreamCreationRequestV29.EventTypeEnum.TIMELINE);
-        req.setFilterValues(Arrays.asList("TEST"));
+        req.setEventType(StreamCreationRequestV30.EventTypeEnum.TIMELINE);
+        req.setFilterValues(List.of("TEST"));
         req.setWaitForAccepted(true);
 
         String uuid = UUID.randomUUID().toString();
@@ -198,7 +242,7 @@ class StreamsServiceImplTest {
         Mockito.when(streamUtils.retrieveMaxStreamsNumber(xpagopacxid)).thenReturn(maxStreams);
 
         //WHEN
-        Mono<StreamMetadataResponseV29> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req));
+        Mono<StreamMetadataResponseV30> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req));
         //THEN
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
     }
@@ -210,9 +254,9 @@ class StreamsServiceImplTest {
         String xpagopapnuid = "PA-xpagopapnuid";
 
 
-        StreamCreationRequestV29 req = new StreamCreationRequestV29();
+        StreamCreationRequestV30 req = new StreamCreationRequestV30();
         req.setTitle("titolo");
-        req.setEventType(StreamCreationRequestV29.EventTypeEnum.STATUS);
+        req.setEventType(StreamCreationRequestV30.EventTypeEnum.STATUS);
         req.setFilterValues(null);
 
         String uuid = UUID.randomUUID().toString();
@@ -240,7 +284,7 @@ class StreamsServiceImplTest {
 
 
         //WHEN
-        StreamMetadataResponseV29 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req)).block(d);
+        StreamMetadataResponseV30 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req)).block(d);
 
         //THEN
         assertNotNull(res);
@@ -255,9 +299,9 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamCreationRequestV29 req = new StreamCreationRequestV29();
+        StreamCreationRequestV30 req = new StreamCreationRequestV30();
         req.setTitle("titolo");
-        req.setEventType(StreamCreationRequestV29.EventTypeEnum.STATUS);
+        req.setEventType(StreamCreationRequestV30.EventTypeEnum.STATUS);
         req.setFilterValues(null);
 
         String uuid = UUID.randomUUID().toString();
@@ -285,7 +329,7 @@ class StreamsServiceImplTest {
         Mockito.when(streamEntityDao.save(Mockito.any())).thenReturn(Mono.just(entity));
 
         //WHEN
-        Mono<StreamMetadataResponseV29> mono = webhookService.createEventStream(xpagopapnuid, xpagopacxid,null,null, Mono.just(req));
+        Mono<StreamMetadataResponseV30> mono = webhookService.createEventStream(xpagopapnuid, xpagopacxid,null,null, Mono.just(req));
         assertThrows(PnStreamMaxStreamsCountReachedException.class, () -> mono.block(d));
 
         //THEN
@@ -297,9 +341,9 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamCreationRequestV29 req = new StreamCreationRequestV29();
+        StreamCreationRequestV30 req = new StreamCreationRequestV30();
         req.setTitle("titolo");
-        req.setEventType(StreamCreationRequestV29.EventTypeEnum.STATUS);
+        req.setEventType(StreamCreationRequestV30.EventTypeEnum.STATUS);
         req.setFilterValues(null);
 
         String uuid = UUID.randomUUID().toString();
@@ -329,7 +373,7 @@ class StreamsServiceImplTest {
         Mockito.when(streamUtils.retrieveMaxStreamsNumber(xpagopacxid)).thenReturn(maxStreams);
 
         //WHEN
-        Mono<StreamMetadataResponseV29> mono = webhookService.createEventStream(xpagopapnuid, xpagopacxid,null,null, Mono.just(req));
+        Mono<StreamMetadataResponseV30> mono = webhookService.createEventStream(xpagopapnuid, xpagopacxid,null,null, Mono.just(req));
         assertDoesNotThrow(() -> mono.block(d));
 
         //THEN
@@ -341,9 +385,9 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamCreationRequestV29 req = new StreamCreationRequestV29();
+        StreamCreationRequestV30 req = new StreamCreationRequestV30();
         req.setTitle("titolo");
-        req.setEventType(StreamCreationRequestV29.EventTypeEnum.STATUS);
+        req.setEventType(StreamCreationRequestV30.EventTypeEnum.STATUS);
         req.setFilterValues(null);
 
         String uuid = UUID.randomUUID().toString();
@@ -382,7 +426,7 @@ class StreamsServiceImplTest {
         Mockito.when(streamUtils.retrieveMaxStreamsNumber(xpagopacxid)).thenReturn(maxStreams);
 
         //WHEN
-        Mono<StreamMetadataResponseV29> mono = webhookService.createEventStream(xpagopapnuid, xpagopacxid,null,null, Mono.just(req));
+        Mono<StreamMetadataResponseV30> mono = webhookService.createEventStream(xpagopapnuid, xpagopacxid,null,null, Mono.just(req));
         assertDoesNotThrow(() -> mono.block(d));
 
         //THEN
@@ -395,14 +439,14 @@ class StreamsServiceImplTest {
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
 
-        StreamCreationRequestV29 req = createEventStreamRequest(Collections.singletonList("gruppo1"));
+        StreamCreationRequestV30 req = createEventStreamRequest(Collections.singletonList("gruppo1"));
 
         Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Collections.singletonList("gruppo1"));
         Mockito.when(streamUtils.retrieveMaxStreamsNumber(xpagopacxid)).thenReturn(maxStreams);
 
 
         //WHEN
-        StreamMetadataResponseV29 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),null, Mono.just(req)).block(d);
+        StreamMetadataResponseV30 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),null, Mono.just(req)).block(d);
 
         //THEN
         assertNotNull(res);
@@ -416,14 +460,14 @@ class StreamsServiceImplTest {
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
 
-        StreamCreationRequestV29 req = createEventStreamRequest(Collections.emptyList());
+        StreamCreationRequestV30 req = createEventStreamRequest(Collections.emptyList());
 
         Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Collections.emptyList());
         Mockito.when(streamUtils.retrieveMaxStreamsNumber(xpagopacxid)).thenReturn(maxStreams);
 
 
         //WHEN
-        Mono<StreamMetadataResponseV29> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),null, Mono.just(req));
+        Mono<StreamMetadataResponseV30> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),null, Mono.just(req));
 
         //THEN
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
@@ -435,7 +479,7 @@ class StreamsServiceImplTest {
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
 
-        StreamCreationRequestV29 req = createEventStreamRequest(Collections.emptyList());
+        StreamCreationRequestV30 req = createEventStreamRequest(Collections.emptyList());
 
         Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Collections.emptyList());
         Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Collections.emptyList());
@@ -443,7 +487,7 @@ class StreamsServiceImplTest {
 
 
         //WHEN
-        Mono<StreamMetadataResponseV29> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.emptyList(),null, Mono.just(req));
+        Mono<StreamMetadataResponseV30> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.emptyList(),null, Mono.just(req));
 
         //THEN
         assertDoesNotThrow(() -> res.block(d));
@@ -455,14 +499,14 @@ class StreamsServiceImplTest {
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
 
-        StreamCreationRequestV29 req = createEventStreamRequest(Collections.emptyList());
+        StreamCreationRequestV30 req = createEventStreamRequest(Collections.emptyList());
 
         Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Collections.emptyList());
         Mockito.when(streamUtils.retrieveMaxStreamsNumber(xpagopacxid)).thenReturn(maxStreams);
 
 
         //WHEN
-        StreamMetadataResponseV29 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req)).block(d);
+        StreamMetadataResponseV30 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req)).block(d);
 
         //THEN
         assertNotNull(res);
@@ -476,14 +520,14 @@ class StreamsServiceImplTest {
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
 
-        StreamCreationRequestV29 req = createEventStreamRequest(Arrays.asList("gruppo1", "gruppo2"));
+        StreamCreationRequestV30 req = createEventStreamRequest(Arrays.asList("gruppo1", "gruppo2"));
 
         Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Arrays.asList("gruppo1", "gruppo2","gruppo3"));
         Mockito.when(streamUtils.retrieveMaxStreamsNumber(xpagopacxid)).thenReturn(maxStreams);
 
 
         //WHEN
-        StreamMetadataResponseV29 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req)).block(d);
+        StreamMetadataResponseV30 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req)).block(d);
 
         //THEN
         assertNotNull(res);
@@ -497,14 +541,14 @@ class StreamsServiceImplTest {
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
 
-        StreamCreationRequestV29 req = createEventStreamRequest(Arrays.asList("gruppo1", "gruppo2", "gruppo3", "gruppo4"));
+        StreamCreationRequestV30 req = createEventStreamRequest(Arrays.asList("gruppo1", "gruppo2", "gruppo3", "gruppo4"));
 
         Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Arrays.asList("gruppo1", "gruppo2","gruppo3"));
         Mockito.when(streamUtils.retrieveMaxStreamsNumber(xpagopacxid)).thenReturn(maxStreams);
 
 
         //WHEN
-        Mono<StreamMetadataResponseV29> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req));
+        Mono<StreamMetadataResponseV30> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req));
         //THEN
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
     }
@@ -515,7 +559,8 @@ class StreamsServiceImplTest {
         String xpagopapnuid = "PA-xpagopapnuid";
 
         UUID replacedStreamId = UUID.randomUUID();
-        StreamCreationRequestV29 req = createEventStreamRequest(Collections.singletonList("gruppo1"), replacedStreamId);
+        StreamCreationRequestV30 req = createEventStreamRequest(Collections.singletonList("gruppo1"), replacedStreamId);
+        req.setCommunicationType(StreamCreationRequestV30.CommunicationTypeEnum.LEGAL);
 
         Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Collections.singletonList("gruppo1"));
 
@@ -524,11 +569,12 @@ class StreamsServiceImplTest {
         replacedEntity.setPaId(xpagopacxid);
         replacedEntity.setVersion("v10");
         replacedEntity.setEventAtomicCounter(3L);
+        replacedEntity.setCommunicationType(CommunicationType.LEGAL);
 
         StreamEntity newEntity = new StreamEntity();
         newEntity.setPaId(xpagopacxid);
         newEntity.setStreamId(UUID.randomUUID().toString());
-        newEntity.setEventType(StreamCreationRequestV29.EventTypeEnum.STATUS.name());
+        newEntity.setEventType(StreamCreationRequestV30.EventTypeEnum.STATUS.name());
 
         Mockito.when(streamEntityDao.get(Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(replacedEntity));
         when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(replacedEntity, Optional.empty())));
@@ -536,7 +582,7 @@ class StreamsServiceImplTest {
         Mockito.when(streamEntityDao.replaceEntity(Mockito.any(), Mockito.any() )).thenReturn(Mono.just(newEntity));
 
         //WHEN
-        StreamMetadataResponseV29 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),"v10", Mono.just(req)).block(d);
+        StreamMetadataResponseV30 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),"v10", Mono.just(req)).block(d);
 
         //THEN
         assertNotNull(res);
@@ -551,7 +597,8 @@ class StreamsServiceImplTest {
         String xpagopapnuid = "PA-xpagopapnuid";
 
         UUID replacedStreamId = UUID.randomUUID();
-        StreamCreationRequestV29 req = createEventStreamRequest(Collections.singletonList("gruppo1"), replacedStreamId);
+        StreamCreationRequestV30 req = createEventStreamRequest(Collections.singletonList("gruppo1"), replacedStreamId);
+        req.setCommunicationType(StreamCreationRequestV30.CommunicationTypeEnum.LEGAL);
 
         Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Collections.singletonList("gruppo1"));
 
@@ -561,11 +608,12 @@ class StreamsServiceImplTest {
         replacedEntity.setVersion("v26");
         replacedEntity.setEventAtomicCounter(3L);
         replacedEntity.setGroups(Collections.singletonList("gruppo1"));
+        replacedEntity.setCommunicationType(CommunicationType.LEGAL);
 
         StreamEntity newEntity = new StreamEntity();
         newEntity.setPaId(xpagopacxid);
         newEntity.setStreamId(UUID.randomUUID().toString());
-        newEntity.setEventType(StreamCreationRequestV29.EventTypeEnum.STATUS.name());
+        newEntity.setEventType(StreamCreationRequestV30.EventTypeEnum.STATUS.name());
 
         Mockito.when(streamEntityDao.get(Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(replacedEntity));
         when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(replacedEntity, Optional.empty())));
@@ -573,12 +621,40 @@ class StreamsServiceImplTest {
         Mockito.when(streamEntityDao.replaceEntity(Mockito.any(), Mockito.any() )).thenReturn(Mono.just(newEntity));
 
         //WHEN
-        StreamMetadataResponseV29 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),null, Mono.just(req)).block(d);
+        StreamMetadataResponseV30 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),null, Mono.just(req)).block(d);
 
         //THEN
         assertNotNull(res);
 
         Mockito.verify(streamEntityDao).replaceEntity(Mockito.any(), Mockito.any());
+    }
+
+    @Test
+    void createEventStreamWithReplaceStreamIdChangingCommunicationTypeNotAllowed() {
+        String xpagopacxid = "PA-xpagopacxid";
+        String xpagopapnuid = "PA-xpagopapnuid";
+
+        UUID replacedStreamId = UUID.randomUUID();
+        StreamCreationRequestV30 req = createEventStreamRequest(Collections.singletonList("gruppo1"), replacedStreamId);
+        req.setCommunicationType(StreamCreationRequestV30.CommunicationTypeEnum.INFORMAL);
+
+        StreamEntity replacedEntity = new StreamEntity();
+        replacedEntity.setStreamId(replacedStreamId.toString());
+        replacedEntity.setPaId(xpagopacxid);
+        replacedEntity.setVersion("v26");
+        replacedEntity.setEventAtomicCounter(3L);
+        replacedEntity.setGroups(Collections.singletonList("gruppo1"));
+
+        replacedEntity.setCommunicationType(CommunicationType.LEGAL);
+        Mockito.when(streamEntityDao.get(Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(replacedEntity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(replacedEntity, Optional.empty())));
+
+        Mono<StreamMetadataResponseV30> res = webhookService.createEventStream(
+                xpagopapnuid, xpagopacxid, Collections.singletonList("gruppo1"), null, Mono.just(req)
+        );
+
+        assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
+        Mockito.verify(streamEntityDao, never()).replaceEntity(Mockito.any(), Mockito.any());
     }
 
     @Test
@@ -588,7 +664,7 @@ class StreamsServiceImplTest {
         String xpagopapnuid = "PA-xpagopapnuid";
 
         UUID replacedStreamId = UUID.randomUUID();
-        StreamCreationRequestV29 req = createEventStreamRequest(Collections.singletonList("gruppo1"), replacedStreamId);
+        StreamCreationRequestV30 req = createEventStreamRequest(Collections.singletonList("gruppo1"), replacedStreamId);
 
         Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Collections.singletonList("gruppo1"));
 
@@ -601,7 +677,7 @@ class StreamsServiceImplTest {
         StreamEntity newEntity = new StreamEntity();
         newEntity.setPaId(xpagopacxid);
         newEntity.setStreamId(UUID.randomUUID().toString());
-        newEntity.setEventType(StreamCreationRequestV29.EventTypeEnum.STATUS.name());
+        newEntity.setEventType(StreamCreationRequestV30.EventTypeEnum.STATUS.name());
 
         Mockito.when(streamEntityDao.get(Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(replacedEntity));
         when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(replacedEntity, Optional.empty())));
@@ -609,7 +685,7 @@ class StreamsServiceImplTest {
         Mockito.when(streamEntityDao.replaceEntity(Mockito.any(), Mockito.any() )).thenReturn(Mono.just(newEntity));
 
         //WHEN
-        Mono<StreamMetadataResponseV29> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),null, Mono.just(req));
+        Mono<StreamMetadataResponseV30> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),null, Mono.just(req));
 
         //THEN
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
@@ -623,7 +699,7 @@ class StreamsServiceImplTest {
         String xpagopapnuid = "PA-xpagopapnuid";
 
         UUID replacedStreamId = UUID.randomUUID();
-        StreamCreationRequestV29 req = createEventStreamRequest(Collections.singletonList("gruppo2"), replacedStreamId);
+        StreamCreationRequestV30 req = createEventStreamRequest(Collections.singletonList("gruppo2"), replacedStreamId);
 
         StreamEntity replacedEntity = new StreamEntity();
         replacedEntity.setStreamId(replacedStreamId.toString());
@@ -635,13 +711,13 @@ class StreamsServiceImplTest {
         StreamEntity newEntity = new StreamEntity();
         newEntity.setPaId(xpagopacxid);
         newEntity.setStreamId(UUID.randomUUID().toString());
-        newEntity.setEventType(StreamCreationRequestV29.EventTypeEnum.STATUS.name());
+        newEntity.setEventType(StreamCreationRequestV30.EventTypeEnum.STATUS.name());
 
         when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(replacedEntity, Optional.empty())));
         Mockito.when(streamEntityDao.replaceEntity(Mockito.any(), Mockito.any() )).thenReturn(Mono.just(newEntity));
 
         //WHEN
-        Mono<StreamMetadataResponseV29> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo2"),null, Mono.just(req));
+        Mono<StreamMetadataResponseV30> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo2"),null, Mono.just(req));
 
         //THEN
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
@@ -654,7 +730,7 @@ class StreamsServiceImplTest {
         String xpagopapnuid = "PA-xpagopapnuid";
 
         UUID replacedStreamId = UUID.randomUUID();
-        StreamCreationRequestV29 req = createEventStreamRequest(Collections.singletonList("gruppo2"), replacedStreamId);
+        StreamCreationRequestV30 req = createEventStreamRequest(Collections.singletonList("gruppo2"), replacedStreamId);
 
         StreamEntity replacedEntity = new StreamEntity();
         replacedEntity.setStreamId(replacedStreamId.toString());
@@ -664,13 +740,13 @@ class StreamsServiceImplTest {
         StreamEntity newEntity = new StreamEntity();
         newEntity.setPaId(xpagopacxid);
         newEntity.setStreamId(UUID.randomUUID().toString());
-        newEntity.setEventType(StreamCreationRequestV29.EventTypeEnum.STATUS.name());
+        newEntity.setEventType(StreamCreationRequestV30.EventTypeEnum.STATUS.name());
 
         Mockito.when(streamEntityDao.get(Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(replacedEntity));
         Mockito.when(streamEntityDao.replaceEntity(Mockito.any(), Mockito.any() )).thenReturn(Mono.just(newEntity));
 
         //WHEN
-        Mono<StreamMetadataResponseV29> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),null, Mono.just(req));
+        Mono<StreamMetadataResponseV30> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),null, Mono.just(req));
 
         //THEN
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
@@ -683,7 +759,7 @@ class StreamsServiceImplTest {
         String xpagopapnuid = "PA-xpagopapnuid";
 
         UUID replacedStreamId = UUID.randomUUID();
-        StreamCreationRequestV29 req = createEventStreamRequest(Collections.singletonList("gruppo2"), replacedStreamId);
+        StreamCreationRequestV30 req = createEventStreamRequest(Collections.singletonList("gruppo2"), replacedStreamId);
 
         StreamEntity replacedEntity = new StreamEntity();
         replacedEntity.setStreamId(replacedStreamId.toString());
@@ -693,14 +769,14 @@ class StreamsServiceImplTest {
         StreamEntity newEntity = new StreamEntity();
         newEntity.setPaId(xpagopacxid);
         newEntity.setStreamId(UUID.randomUUID().toString());
-        newEntity.setEventType(StreamCreationRequestV29.EventTypeEnum.STATUS.name());
+        newEntity.setEventType(StreamCreationRequestV30.EventTypeEnum.STATUS.name());
 
         Mockito.when(streamEntityDao.get(Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(replacedEntity));
         Mockito.when(streamEntityDao.replaceEntity(Mockito.any(), Mockito.any() )).thenReturn(Mono.just(newEntity));
         Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Collections.singletonList("gruppo1"));
 
         //WHEN
-        Mono<StreamMetadataResponseV29> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req));
+        Mono<StreamMetadataResponseV30> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req));
 
         //THEN
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
@@ -714,7 +790,7 @@ class StreamsServiceImplTest {
         String xpagopapnuid = "PA-xpagopapnuid";
 
         UUID replacedStreamId = UUID.randomUUID();
-        StreamCreationRequestV29 req = createEventStreamRequest(Collections.singletonList("gruppo1"), replacedStreamId);
+        StreamCreationRequestV30 req = createEventStreamRequest(Collections.singletonList("gruppo1"), replacedStreamId);
 
         StreamEntity replacedEntity = new StreamEntity();
         replacedEntity.setStreamId(replacedStreamId.toString());
@@ -725,13 +801,13 @@ class StreamsServiceImplTest {
         StreamEntity newEntity = new StreamEntity();
         newEntity.setPaId(xpagopacxid);
         newEntity.setStreamId(UUID.randomUUID().toString());
-        newEntity.setEventType(StreamCreationRequestV29.EventTypeEnum.STATUS.name());
+        newEntity.setEventType(StreamCreationRequestV30.EventTypeEnum.STATUS.name());
 
         when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(replacedEntity, Optional.empty())));
         Mockito.when(streamEntityDao.replaceEntity(Mockito.any(), Mockito.any() )).thenReturn(Mono.just(newEntity));
 
         //WHEN
-        Mono<StreamMetadataResponseV29> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),null, Mono.just(req));
+        Mono<StreamMetadataResponseV30> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),null, Mono.just(req));
 
         //THEN
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
@@ -743,14 +819,14 @@ class StreamsServiceImplTest {
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
 
-        StreamCreationRequestV29 req = createEventStreamRequest(Arrays.asList("gruppo1", "gruppo2"));
+        StreamCreationRequestV30 req = createEventStreamRequest(Arrays.asList("gruppo1", "gruppo2"));
 
         Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Arrays.asList("gruppo1", "gruppo2","gruppo3"));
         Mockito.when(streamUtils.retrieveMaxStreamsNumber(xpagopacxid)).thenReturn(maxStreams);
 
 
         //WHEN
-        StreamMetadataResponseV29 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req)).block(d);
+        StreamMetadataResponseV30 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req)).block(d);
 
         //THEN
         assertNotNull(res);
@@ -768,14 +844,14 @@ class StreamsServiceImplTest {
         String xpagopapnuid = "PA-xpagopapnuid";
         String xPagopaPnApiVersion = "v10";
 
-        StreamCreationRequestV29 req = createEventStreamRequest(Collections.emptyList());
+        StreamCreationRequestV30 req = createEventStreamRequest(Collections.emptyList());
 
         Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Arrays.asList("gruppo1", "gruppo2","gruppo3"));
         Mockito.when(streamUtils.retrieveMaxStreamsNumber(xpagopacxid)).thenReturn(maxStreams);
 
 
         //WHEN
-        StreamMetadataResponseV29 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, List.of("gruppo1"),xPagopaPnApiVersion, Mono.just(req)).block(d);
+        StreamMetadataResponseV30 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, List.of("gruppo1"),xPagopaPnApiVersion, Mono.just(req)).block(d);
 
         //THEN
         assertNotNull(res);
@@ -786,17 +862,17 @@ class StreamsServiceImplTest {
         assertEquals(xPagopaPnApiVersion, argument.getValue().getVersion());
     }
 
-    private StreamCreationRequestV29 createEventStreamRequest(List<String> requestGroups) {
+    private StreamCreationRequestV30 createEventStreamRequest(List<String> requestGroups) {
         return createEventStreamRequest(requestGroups, null);
     }
-    private StreamCreationRequestV29 createEventStreamRequest(List<String> requestGroups, UUID replacedStreamId) {
+    private StreamCreationRequestV30 createEventStreamRequest(List<String> requestGroups, UUID replacedStreamId) {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
 
 
-        StreamCreationRequestV29 req = new StreamCreationRequestV29();
+        StreamCreationRequestV30 req = new StreamCreationRequestV30();
         req.setTitle("titolo");
-        req.setEventType(StreamCreationRequestV29.EventTypeEnum.STATUS);
+        req.setEventType(StreamCreationRequestV30.EventTypeEnum.STATUS);
         req.setFilterValues(null);
         req.setGroups(requestGroups);
         req.setReplacedStreamId(replacedStreamId);
@@ -835,14 +911,14 @@ class StreamsServiceImplTest {
         StreamEntity disabledEntity = new StreamEntity();
         disabledEntity.setPaId(xpagopacxid);
         disabledEntity.setStreamId(toBeDisabledStreamId.toString());
-        disabledEntity.setEventType(StreamCreationRequestV29.EventTypeEnum.STATUS.name());
+        disabledEntity.setEventType(StreamCreationRequestV30.EventTypeEnum.STATUS.name());
         disabledEntity.setVersion("v26");
 
         Mockito.when(streamEntityDao.getWithRetryAfter(Mockito.any(), Mockito.any())).thenReturn(Mono.just(Tuples.of(disabledEntity, Optional.empty())));
         Mockito.when(streamEntityDao.disable(Mockito.any())).thenReturn(Mono.just(disabledEntity));
 
         //WHEN
-        Mono<StreamMetadataResponseV29> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid,null,null, toBeDisabledStreamId);
+        Mono<StreamMetadataResponseV30> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid,null,null, toBeDisabledStreamId);
         res.block(d);
         //THEN
         Mockito.verify(streamEntityDao).disable(Mockito.any());
@@ -858,7 +934,7 @@ class StreamsServiceImplTest {
         StreamEntity disabledEntity = new StreamEntity();
         disabledEntity.setPaId(xpagopacxid);
         disabledEntity.setStreamId(toBeDisabledStreamId.toString());
-        disabledEntity.setEventType(StreamCreationRequestV29.EventTypeEnum.STATUS.name());
+        disabledEntity.setEventType(StreamCreationRequestV30.EventTypeEnum.STATUS.name());
         disabledEntity.setVersion("v23");
         disabledEntity.setGroups(Collections.emptyList());
 
@@ -868,7 +944,7 @@ class StreamsServiceImplTest {
         Mockito.when(streamEntityDao.disable(Mockito.any())).thenReturn(Mono.just(disabledEntity));
 
         //WHEN
-        Mono<StreamMetadataResponseV29> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid, List.of("gruppo1"),null, toBeDisabledStreamId);
+        Mono<StreamMetadataResponseV30> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid, List.of("gruppo1"),null, toBeDisabledStreamId);
         //THEN
         Assert.assertThrows(PnStreamForbiddenException.class, ()->res.block(d));
         Mockito.verify(streamEntityDao, never()).disable(Mockito.any());
@@ -885,7 +961,7 @@ class StreamsServiceImplTest {
         StreamEntity disabledEntity = new StreamEntity();
         disabledEntity.setPaId(xpagopacxid);
         disabledEntity.setStreamId(toBeDisabledStreamId.toString());
-        disabledEntity.setEventType(StreamCreationRequestV29.EventTypeEnum.STATUS.name());
+        disabledEntity.setEventType(StreamCreationRequestV30.EventTypeEnum.STATUS.name());
         disabledEntity.setVersion("v23");
         disabledEntity.setDisabledDate(Instant.now());
 
@@ -893,7 +969,7 @@ class StreamsServiceImplTest {
         Mockito.when(streamEntityDao.disable(Mockito.any())).thenReturn(Mono.just(disabledEntity));
 
         //WHEN
-        Mono<StreamMetadataResponseV29> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid,null,null, toBeDisabledStreamId);
+        Mono<StreamMetadataResponseV30> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid,null,null, toBeDisabledStreamId);
         //THEN
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
     }
@@ -910,7 +986,7 @@ class StreamsServiceImplTest {
         StreamEntity disabledEntity = new StreamEntity();
         disabledEntity.setPaId(xpagopacxid);
         disabledEntity.setStreamId(toBeDisabledStreamId.toString());
-        disabledEntity.setEventType(StreamCreationRequestV29.EventTypeEnum.STATUS.name());
+        disabledEntity.setEventType(StreamCreationRequestV30.EventTypeEnum.STATUS.name());
         disabledEntity.setVersion("v10");
         disabledEntity.setDisabledDate(Instant.now());
 
@@ -918,7 +994,7 @@ class StreamsServiceImplTest {
         Mockito.when(streamEntityDao.disable(Mockito.any())).thenReturn(Mono.just(disabledEntity));
 
         //WHEN
-        Mono<StreamMetadataResponseV29> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid,null,xPagopaPnApiVersion, toBeDisabledStreamId);
+        Mono<StreamMetadataResponseV30> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid,null,xPagopaPnApiVersion, toBeDisabledStreamId);
         //THEN
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
     }
@@ -935,7 +1011,7 @@ class StreamsServiceImplTest {
         StreamEntity disabledEntity = new StreamEntity();
         disabledEntity.setPaId(xpagopacxid);
         disabledEntity.setStreamId(toBeDisabledStreamId.toString());
-        disabledEntity.setEventType(StreamCreationRequestV29.EventTypeEnum.STATUS.name());
+        disabledEntity.setEventType(StreamCreationRequestV30.EventTypeEnum.STATUS.name());
         disabledEntity.setVersion("v23");
         disabledEntity.setDisabledDate(Instant.now());
         disabledEntity.setGroups(Arrays.asList("gruppo1","gruppo2"));
@@ -944,7 +1020,7 @@ class StreamsServiceImplTest {
         Mockito.when(streamEntityDao.disable(Mockito.any())).thenReturn(Mono.just(disabledEntity));
 
         //WHEN
-        Mono<StreamMetadataResponseV29> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid, List.of("gruppo3"),xPagopaPnApiVersion, toBeDisabledStreamId);
+        Mono<StreamMetadataResponseV30> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid, List.of("gruppo3"),xPagopaPnApiVersion, toBeDisabledStreamId);
         //THEN
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
     }
@@ -960,7 +1036,7 @@ class StreamsServiceImplTest {
         StreamEntity disabledEntity = new StreamEntity();
         disabledEntity.setPaId(xpagopacxid);
         disabledEntity.setStreamId(toBeDisabledStreamId.toString());
-        disabledEntity.setEventType(StreamCreationRequestV29.EventTypeEnum.STATUS.name());
+        disabledEntity.setEventType(StreamCreationRequestV30.EventTypeEnum.STATUS.name());
         disabledEntity.setVersion("v23");
         disabledEntity.setGroups(Arrays.asList("gruppo1","gruppo2"));
 
@@ -970,7 +1046,7 @@ class StreamsServiceImplTest {
         Mockito.when(streamEntityDao.disable(Mockito.any())).thenReturn(Mono.just(disabledEntity));
 
         //WHEN
-        Mono<StreamMetadataResponseV29> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid,Arrays.asList("gruppo1","gruppo2"),xPagopaPnApiVersion, toBeDisabledStreamId);
+        Mono<StreamMetadataResponseV30> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid,Arrays.asList("gruppo1","gruppo2"),xPagopaPnApiVersion, toBeDisabledStreamId);
         res.block(d);
         //THEN
         Mockito.verify(streamEntityDao).disable(Mockito.any());
@@ -988,7 +1064,7 @@ class StreamsServiceImplTest {
         StreamEntity disabledEntity = new StreamEntity();
         disabledEntity.setPaId(xpagopacxid);
         disabledEntity.setStreamId(toBeDisabledStreamId.toString());
-        disabledEntity.setEventType(StreamCreationRequestV29.EventTypeEnum.STATUS.name());
+        disabledEntity.setEventType(StreamCreationRequestV30.EventTypeEnum.STATUS.name());
         disabledEntity.setVersion("v23");
         disabledEntity.setGroups(Arrays.asList("gruppo1","gruppo2"));
 
@@ -998,7 +1074,7 @@ class StreamsServiceImplTest {
         Mockito.when(streamEntityDao.disable(Mockito.any())).thenReturn(Mono.just(disabledEntity));
 
         //WHEN
-        Mono<StreamMetadataResponseV29> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid, List.of("gruppo2"),xPagopaPnApiVersion, toBeDisabledStreamId);
+        Mono<StreamMetadataResponseV30> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid, List.of("gruppo2"),xPagopaPnApiVersion, toBeDisabledStreamId);
         //THEN
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
     }
@@ -1236,9 +1312,9 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamRequestV29 req = new StreamRequestV29();
+        StreamRequestV30 req = new StreamRequestV30();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV29.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV30.EventTypeEnum.STATUS);
         req.setFilterValues(null);
 
         UUID uuidd = UUID.randomUUID();
@@ -1256,7 +1332,7 @@ class StreamsServiceImplTest {
         Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
 
 
-        Mono<StreamMetadataResponseV29> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,null,null, uuidd, Mono.just(req));
+        Mono<StreamMetadataResponseV30> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,null,null, uuidd, Mono.just(req));
         assertThrows(PnStreamForbiddenException.class, () -> mono.block(d));
 
         //THEN
@@ -1268,9 +1344,9 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamRequestV29 req = new StreamRequestV29();
+        StreamRequestV30 req = new StreamRequestV30();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV29.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV30.EventTypeEnum.STATUS);
         req.setFilterValues(null);
 
         UUID uuidd = UUID.randomUUID();
@@ -1287,7 +1363,7 @@ class StreamsServiceImplTest {
         when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
 
-        Mono<StreamMetadataResponseV29> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid, List.of("gruppo1"),null, uuidd, Mono.just(req));
+        Mono<StreamMetadataResponseV30> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid, List.of("gruppo1"),null, uuidd, Mono.just(req));
         assertThrows(PnStreamForbiddenException.class, () -> mono.block(d));
 
         //THEN
@@ -1299,10 +1375,11 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamRequestV29 req = new StreamRequestV29();
+        StreamRequestV30 req = new StreamRequestV30();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV29.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV30.EventTypeEnum.STATUS);
         req.setFilterValues(null);
+        req.setCommunicationType(StreamRequestV30.CommunicationTypeEnum.LEGAL);
 
         UUID uuidd = UUID.randomUUID();
         String uuid = uuidd.toString();
@@ -1315,11 +1392,12 @@ class StreamsServiceImplTest {
         entity.setActivationDate(Instant.now());
         entity.setGroups(Collections.emptyList());
         entity.setVersion("v26");
+        entity.setCommunicationType(CommunicationType.LEGAL);
 
         when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
 
-        Mono<StreamMetadataResponseV29> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Collections.emptyList(),null, uuidd, Mono.just(req));
+        Mono<StreamMetadataResponseV30> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Collections.emptyList(),null, uuidd, Mono.just(req));
         assertDoesNotThrow( () -> mono.block(d));
 
         //THEN
@@ -1331,9 +1409,9 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamRequestV29 req = new StreamRequestV29();
+        StreamRequestV30 req = new StreamRequestV30();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV29.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV30.EventTypeEnum.STATUS);
         req.setFilterValues(null);
         req.setGroups(List.of("gruppo1"));
 
@@ -1353,7 +1431,7 @@ class StreamsServiceImplTest {
         when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
 
-        Mono<StreamMetadataResponseV29> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Collections.emptyList(),null, uuidd, Mono.just(req));
+        Mono<StreamMetadataResponseV30> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Collections.emptyList(),null, uuidd, Mono.just(req));
         assertThrows(PnStreamForbiddenException.class, () -> mono.block(d));
 
         //THEN
@@ -1366,11 +1444,12 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamRequestV29 req = new StreamRequestV29();
+        StreamRequestV30 req = new StreamRequestV30();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV29.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV30.EventTypeEnum.STATUS);
         req.setFilterValues(null);
         req.setGroups(Arrays.asList("gruppo1","gruppo2"));
+        req.setCommunicationType(StreamRequestV30.CommunicationTypeEnum.LEGAL);
 
         UUID uuidd = UUID.randomUUID();
         String uuid = uuidd.toString();
@@ -1383,12 +1462,13 @@ class StreamsServiceImplTest {
         entity.setActivationDate(Instant.now());
         entity.setGroups(List.of("gruppo1"));
         entity.setVersion("v26");
+        entity.setCommunicationType(CommunicationType.LEGAL);
 
         Mockito.when(pnExternalRegistryClient.getGroups(Mockito.anyString(), Mockito.anyString())).thenReturn(Arrays.asList("gruppo1","gruppo2"));
         when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
 
-        Mono<StreamMetadataResponseV29> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Collections.emptyList(),null, uuidd, Mono.just(req));
+        Mono<StreamMetadataResponseV30> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Collections.emptyList(),null, uuidd, Mono.just(req));
         assertDoesNotThrow( () -> mono.block(d));
 
         //THEN
@@ -1401,9 +1481,9 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamRequestV29 req = new StreamRequestV29();
+        StreamRequestV30 req = new StreamRequestV30();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV29.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV30.EventTypeEnum.STATUS);
         req.setFilterValues(null);
         req.setGroups(List.of("gruppo2"));
 
@@ -1423,7 +1503,7 @@ class StreamsServiceImplTest {
         when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
 
-        Mono<StreamMetadataResponseV29> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Collections.emptyList(),null, uuidd, Mono.just(req));
+        Mono<StreamMetadataResponseV30> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Collections.emptyList(),null, uuidd, Mono.just(req));
         assertThrows( PnStreamForbiddenException.class,() -> mono.block(d));
 
         //THEN
@@ -1436,11 +1516,12 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamRequestV29 req = new StreamRequestV29();
+        StreamRequestV30 req = new StreamRequestV30();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV29.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV30.EventTypeEnum.STATUS);
         req.setFilterValues(null);
         req.setGroups(Arrays.asList("gruppo1","gruppo2"));
+        req.setCommunicationType(StreamRequestV30.CommunicationTypeEnum.LEGAL);
 
         UUID uuidd = UUID.randomUUID();
         String uuid = uuidd.toString();
@@ -1453,11 +1534,12 @@ class StreamsServiceImplTest {
         entity.setActivationDate(Instant.now());
         entity.setGroups(List.of("gruppo1"));
         entity.setVersion("v26");
+        entity.setCommunicationType(CommunicationType.LEGAL);
 
         when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
 
-        Mono<StreamMetadataResponseV29> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Arrays.asList("gruppo1","gruppo2"),null, uuidd, Mono.just(req));
+        Mono<StreamMetadataResponseV30> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Arrays.asList("gruppo1","gruppo2"),null, uuidd, Mono.just(req));
         assertDoesNotThrow( () -> mono.block(d));
 
         //THEN
@@ -1470,12 +1552,13 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamRequestV29 req = new StreamRequestV29();
+        StreamRequestV30 req = new StreamRequestV30();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV29.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV30.EventTypeEnum.STATUS);
         req.setFilterValues(null);
         req.setGroups(Arrays.asList("gruppo1","gruppo2"));
         req.setWaitForAccepted(false);
+        req.setCommunicationType(StreamRequestV30.CommunicationTypeEnum.LEGAL);
 
         UUID uuidd = UUID.randomUUID();
         String uuid = uuidd.toString();
@@ -1489,11 +1572,12 @@ class StreamsServiceImplTest {
         entity.setGroups(List.of("gruppo1"));
         entity.setVersion("v26");
         entity.setSorting(false);
+        entity.setCommunicationType(CommunicationType.LEGAL);
 
         when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
 
-        Mono<StreamMetadataResponseV29> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Arrays.asList("gruppo1","gruppo2"),null, uuidd, Mono.just(req));
+        Mono<StreamMetadataResponseV30> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Arrays.asList("gruppo1","gruppo2"),null, uuidd, Mono.just(req));
         assertDoesNotThrow( () -> mono.block(d));
 
         //THEN
@@ -1506,12 +1590,13 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamRequestV29 req = new StreamRequestV29();
+        StreamRequestV30 req = new StreamRequestV30();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV29.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV30.EventTypeEnum.STATUS);
         req.setFilterValues(null);
         req.setGroups(Arrays.asList("gruppo1","gruppo2"));
         req.setWaitForAccepted(true);
+        req.setCommunicationType(StreamRequestV30.CommunicationTypeEnum.LEGAL);
 
         UUID uuidd = UUID.randomUUID();
         String uuid = uuidd.toString();
@@ -1525,16 +1610,90 @@ class StreamsServiceImplTest {
         entity.setGroups(List.of("gruppo1"));
         entity.setVersion("v26");
         entity.setSorting(true);
+        entity.setCommunicationType(CommunicationType.LEGAL);
 
         when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
 
-        Mono<StreamMetadataResponseV29> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Arrays.asList("gruppo1","gruppo2"),null, uuidd, Mono.just(req));
+        Mono<StreamMetadataResponseV30> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Arrays.asList("gruppo1","gruppo2"),null, uuidd, Mono.just(req));
         assertDoesNotThrow( () -> mono.block(d));
 
         //THEN
         Mockito.verify(streamEntityDao, Mockito.times(1)).update(Mockito.any());
         Mockito.verify(schedulerService, never()).scheduleSortEvent(any(),any(),any(),any());
+    }
+
+    @Test
+    void updateEventStreamChangingCommunicationTypeNotAllowed() {
+        String xpagopacxid = "PA-xpagopacxid";
+        String xpagopapnuid = "PA-xpagopapnuid";
+        StreamRequestV30 req = new StreamRequestV30();
+        req.setTitle("titolo");
+        req.setEventType(StreamRequestV30.EventTypeEnum.STATUS);
+        req.setCommunicationType(StreamRequestV30.CommunicationTypeEnum.INFORMAL);
+        req.setFilterValues(null);
+        req.setGroups(Arrays.asList("gruppo1", "gruppo2"));
+
+        UUID uuidd = UUID.randomUUID();
+        String uuid = uuidd.toString();
+        StreamEntity entity = new StreamEntity();
+        entity.setStreamId(uuid);
+        entity.setTitle(req.getTitle());
+        entity.setPaId(xpagopacxid);
+        entity.setEventType(req.getEventType().toString());
+        entity.setFilterValues(new HashSet<>());
+        entity.setActivationDate(Instant.now());
+        entity.setGroups(List.of("gruppo1"));
+        entity.setVersion("v26");
+        entity.setCommunicationType(CommunicationType.LEGAL);
+
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
+        Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
+
+        Mono<StreamMetadataResponseV30> mono = webhookService.updateEventStream(
+                xpagopapnuid, xpagopacxid, Arrays.asList("gruppo1", "gruppo2"), null, uuidd, Mono.just(req)
+        );
+        assertThrows(PnStreamForbiddenException.class, () -> mono.block(d));
+
+        Mockito.verify(streamEntityDao, Mockito.never()).update(Mockito.any());
+    }
+
+    @Test
+    void updateEventStreamWithCommunicationType() {
+        String xpagopacxid = "PA-xpagopacxid";
+        String xpagopapnuid = "PA-xpagopapnuid";
+        UUID uuidd = UUID.randomUUID();
+        String uuid = uuidd.toString();
+
+        StreamRequestV30 req = new StreamRequestV30();
+        req.setTitle("titolo");
+        req.setEventType(StreamRequestV30.EventTypeEnum.STATUS);
+        req.setCommunicationType(StreamRequestV30.CommunicationTypeEnum.INFORMAL);
+        req.setFilterValues(null);
+        req.setGroups(Arrays.asList("gruppo1", "gruppo2"));
+
+        StreamEntity currentEntity = new StreamEntity();
+        currentEntity.setStreamId(uuid);
+        currentEntity.setTitle(req.getTitle());
+        currentEntity.setPaId(xpagopacxid);
+        currentEntity.setEventType(req.getEventType().toString());
+        currentEntity.setFilterValues(new HashSet<>());
+        currentEntity.setActivationDate(Instant.now());
+        currentEntity.setGroups(List.of("gruppo1"));
+        currentEntity.setVersion("v26");
+        currentEntity.setCommunicationType(CommunicationType.INFORMAL);
+
+        ArgumentCaptor<StreamEntity> captor = ArgumentCaptor.forClass(StreamEntity.class);
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(currentEntity, Optional.empty())));
+        Mockito.when(streamEntityDao.update(captor.capture())).thenAnswer(invocation -> Mono.just(invocation.getArgument(0, StreamEntity.class)));
+
+        StreamMetadataResponseV30 res = webhookService.updateEventStream(
+                xpagopapnuid, xpagopacxid, Arrays.asList("gruppo1", "gruppo2"), null, uuidd, Mono.just(req)
+        ).block(d);
+
+        assertNotNull(res);
+        assertEquals(CommunicationType.INFORMAL, captor.getValue().getCommunicationType());
+        assertEquals(StreamMetadataResponseV30.CommunicationTypeEnum.INFORMAL, res.getCommunicationType());
     }
 
 
@@ -1543,9 +1702,9 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamRequestV29 req = new StreamRequestV29();
+        StreamRequestV30 req = new StreamRequestV30();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV29.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV30.EventTypeEnum.STATUS);
         req.setFilterValues(null);
         req.setGroups(List.of("gruppo1"));
 
@@ -1564,7 +1723,7 @@ class StreamsServiceImplTest {
         when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
 
-        Mono<StreamMetadataResponseV29> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Arrays.asList("gruppo1","gruppo2"),null, uuidd, Mono.just(req));
+        Mono<StreamMetadataResponseV30> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Arrays.asList("gruppo1","gruppo2"),null, uuidd, Mono.just(req));
         assertThrows(PnStreamForbiddenException.class, () -> mono.block(d));
 
         //THEN
@@ -1577,12 +1736,13 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamRequestV29 req = new StreamRequestV29();
+        StreamRequestV30 req = new StreamRequestV30();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV29.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV30.EventTypeEnum.STATUS);
         req.setFilterValues(null);
         req.setGroups(List.of("gruppo1"));
         req.setWaitForAccepted(null);
+        req.setCommunicationType(StreamRequestV30.CommunicationTypeEnum.LEGAL);
 
         UUID uuidd = UUID.randomUUID();
         String uuid = uuidd.toString();
@@ -1595,12 +1755,13 @@ class StreamsServiceImplTest {
         entity.setActivationDate(Instant.now());
         entity.setGroups(List.of("gruppo1"));
         entity.setVersion("v27");
+        entity.setCommunicationType(CommunicationType.LEGAL);
 
         ArgumentCaptor<StreamEntity> captor = ArgumentCaptor.forClass(StreamEntity.class);
         when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.update(captor.capture())).thenReturn(Mono.just(entity));
 
-        Mono<StreamMetadataResponseV29> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,List.of("gruppo1"),"v27", uuidd, Mono.just(req));
+        Mono<StreamMetadataResponseV30> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,List.of("gruppo1"),"v27", uuidd, Mono.just(req));
         assertDoesNotThrow(() -> mono.block(d));
         Assertions.assertNull(captor.getValue().getSorting());
         //THEN
@@ -1621,7 +1782,7 @@ class StreamsServiceImplTest {
         entity.setStreamId(uuid);
         entity.setTitle("");
         entity.setPaId(xpagopacxid);
-        entity.setEventType(StreamMetadataResponseV29.EventTypeEnum.STATUS.toString());
+        entity.setEventType(StreamMetadataResponseV30.EventTypeEnum.STATUS.toString());
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
         entity.setVersion("v26");
@@ -1633,7 +1794,7 @@ class StreamsServiceImplTest {
 
 
         //WHEN
-        StreamMetadataResponseV29 res = webhookService.getEventStream(xpagopapnuid,xpagopacxid,null,null, uuidd).block(d);
+        StreamMetadataResponseV30 res = webhookService.getEventStream(xpagopapnuid,xpagopacxid,null,null, uuidd).block(d);
 
         //THEN
         assertNotNull(res);
@@ -1653,7 +1814,7 @@ class StreamsServiceImplTest {
         entity.setStreamId(uuid);
         entity.setTitle("");
         entity.setPaId(xpagopacxid);
-        entity.setEventType(StreamMetadataResponseV29.EventTypeEnum.STATUS.toString());
+        entity.setEventType(StreamMetadataResponseV30.EventTypeEnum.STATUS.toString());
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
         entity.setVersion("v26");
@@ -1667,7 +1828,7 @@ class StreamsServiceImplTest {
         List<String> reqGroups = new ArrayList<>();
         reqGroups.add("gruppo1");
         //WHEN
-        Mono<StreamMetadataResponseV29> mono = webhookService.getEventStream(xpagopapnuid,xpagopacxid,reqGroups,null, uuidd);
+        Mono<StreamMetadataResponseV30> mono = webhookService.getEventStream(xpagopapnuid,xpagopacxid,reqGroups,null, uuidd);
 
         //THEN
         assertDoesNotThrow(() -> mono.block(d));
@@ -1685,7 +1846,7 @@ class StreamsServiceImplTest {
         entity.setStreamId(uuid);
         entity.setTitle("");
         entity.setPaId(xpagopacxid);
-        entity.setEventType(StreamMetadataResponseV29.EventTypeEnum.STATUS.toString());
+        entity.setEventType(StreamMetadataResponseV30.EventTypeEnum.STATUS.toString());
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
         entity.setVersion("v26");
@@ -1698,9 +1859,10 @@ class StreamsServiceImplTest {
         List<String> reqGroups = new ArrayList<>();
         reqGroups.add("gruppo1");
         //WHEN
-        StreamMetadataResponseV29 res = webhookService.getEventStream(xpagopapnuid,xpagopacxid,reqGroups,null, uuidd).block();
+        StreamMetadataResponseV30 res = webhookService.getEventStream(xpagopapnuid,xpagopacxid,reqGroups,null, uuidd).block();
 
         //THEN
+        assertNotNull(res);
         Assertions.assertEquals(false, res.getWaitForAccepted());
 
         Mockito.verify(streamEntityDao).get(xpagopacxid, uuid);
@@ -1718,7 +1880,7 @@ class StreamsServiceImplTest {
         entity.setStreamId(uuid);
         entity.setTitle("");
         entity.setPaId(xpagopacxid);
-        entity.setEventType(StreamMetadataResponseV29.EventTypeEnum.STATUS.toString());
+        entity.setEventType(StreamMetadataResponseV30.EventTypeEnum.STATUS.toString());
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
         entity.setVersion("v10");
@@ -1730,7 +1892,7 @@ class StreamsServiceImplTest {
         List<String> reqGroups = new ArrayList<>();
         reqGroups.add("gruppo1");
         //WHEN
-        Mono<StreamMetadataResponseV29> mono = webhookService.getEventStream(xpagopapnuid,xpagopacxid,reqGroups,null, uuidd);
+        Mono<StreamMetadataResponseV30> mono = webhookService.getEventStream(xpagopapnuid,xpagopacxid,reqGroups,null, uuidd);
 
         //THEN
         assertThrows(PnStreamForbiddenException.class, () -> mono.block(d));
@@ -1749,7 +1911,7 @@ class StreamsServiceImplTest {
         entity.setStreamId(uuid);
         entity.setTitle("");
         entity.setPaId(xpagopacxid);
-        entity.setEventType(StreamMetadataResponseV29.EventTypeEnum.STATUS.toString());
+        entity.setEventType(StreamMetadataResponseV30.EventTypeEnum.STATUS.toString());
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
         entity.setVersion("v26");
@@ -1761,7 +1923,7 @@ class StreamsServiceImplTest {
         List<String> reqGroups = new ArrayList<>();
         reqGroups.add("gruppo1");
         //WHEN
-        Mono<StreamMetadataResponseV29> mono = webhookService.getEventStream(xpagopapnuid,xpagopacxid,reqGroups,null, uuidd);
+        Mono<StreamMetadataResponseV30> mono = webhookService.getEventStream(xpagopapnuid,xpagopacxid,reqGroups,null, uuidd);
 
         //THEN
         assertDoesNotThrow(() -> mono.block(d));
@@ -1781,7 +1943,7 @@ class StreamsServiceImplTest {
         entity.setStreamId(uuid);
         entity.setTitle("");
         entity.setPaId(xpagopacxid);
-        entity.setEventType(StreamMetadataResponseV29.EventTypeEnum.STATUS.toString());
+        entity.setEventType(StreamMetadataResponseV30.EventTypeEnum.STATUS.toString());
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
         entity.setVersion("v26");
@@ -1793,7 +1955,7 @@ class StreamsServiceImplTest {
 
 
         //WHEN
-        Mono<StreamMetadataResponseV29> res = webhookService.getEventStream(xpagopapnuid,xpagopacxid,Collections.emptyList(),null, uuidd);
+        Mono<StreamMetadataResponseV30> res = webhookService.getEventStream(xpagopapnuid,xpagopacxid,Collections.emptyList(),null, uuidd);
 
         //THEN
         assertDoesNotThrow(() -> res.block(d));
@@ -1812,7 +1974,7 @@ class StreamsServiceImplTest {
         entity.setStreamId(uuid);
         entity.setTitle("");
         entity.setPaId(xpagopacxid);
-        entity.setEventType(StreamMetadataResponseV29.EventTypeEnum.STATUS.toString());
+        entity.setEventType(StreamMetadataResponseV30.EventTypeEnum.STATUS.toString());
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
         entity.setGroups(Arrays.asList("gruppo1","gruppo2"));
@@ -1823,7 +1985,7 @@ class StreamsServiceImplTest {
 
 
         //WHEN
-        StreamMetadataResponseV29 res = webhookService.getEventStream(xpagopapnuid,xpagopacxid,null,null, uuidd).block(d);
+        StreamMetadataResponseV30 res = webhookService.getEventStream(xpagopapnuid,xpagopacxid,null,null, uuidd).block(d);
 
         //THEN
         assertNotNull(res);
@@ -1842,7 +2004,7 @@ class StreamsServiceImplTest {
         entity.setStreamId(uuid);
         entity.setTitle("1");
         entity.setPaId(xpagopacxid);
-        entity.setEventType(StreamMetadataResponseV29.EventTypeEnum.STATUS.toString());
+        entity.setEventType(StreamMetadataResponseV30.EventTypeEnum.STATUS.toString());
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
 
@@ -1850,7 +2012,7 @@ class StreamsServiceImplTest {
         entity.setStreamId(UUID.randomUUID().toString());
         entity.setTitle("2");
         entity.setPaId(xpagopacxid);
-        entity.setEventType(StreamMetadataResponseV29.EventTypeEnum.TIMELINE.toString());
+        entity.setEventType(StreamMetadataResponseV30.EventTypeEnum.TIMELINE.toString());
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
 
@@ -1876,11 +2038,12 @@ class StreamsServiceImplTest {
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
 
-        StreamRequestV29 req = new StreamRequestV29();
+        StreamRequestV30 req = new StreamRequestV30();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV29.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV30.EventTypeEnum.STATUS);
         req.setFilterValues(null);
         req.setGroups(Collections.emptyList());
+        req.setCommunicationType(StreamRequestV30.CommunicationTypeEnum.LEGAL);
 
         UUID uuidd = UUID.randomUUID();
         String uuid = uuidd.toString();
@@ -1893,13 +2056,14 @@ class StreamsServiceImplTest {
         entity.setActivationDate(Instant.now());
         entity.setVersion("v10");
         entity.setGroups(Collections.emptyList());
+        entity.setCommunicationType(CommunicationType.LEGAL);
 
 
         when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
 
         //WHEN
-        StreamMetadataResponseV29 res = webhookService.updateEventStream(xpagopapnuid,xpagopacxid, List.of("gruppo1"),"v10", uuidd, Mono.just(req)).block(d);
+        StreamMetadataResponseV30 res = webhookService.updateEventStream(xpagopapnuid,xpagopacxid, List.of("gruppo1"),"v10", uuidd, Mono.just(req)).block(d);
 
         //THEN
         assertNotNull(res);
@@ -1920,10 +2084,11 @@ class StreamsServiceImplTest {
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
 
-        StreamRequestV29 req = new StreamRequestV29();
+        StreamRequestV30 req = new StreamRequestV30();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV29.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV30.EventTypeEnum.STATUS);
         req.setFilterValues(null);
+        req.setCommunicationType(StreamRequestV30.CommunicationTypeEnum.LEGAL);
 
         UUID uuidd = UUID.randomUUID();
         String uuid = uuidd.toString();
@@ -1935,6 +2100,7 @@ class StreamsServiceImplTest {
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
         entity.setVersion(entityVersion);
+        entity.setCommunicationType(CommunicationType.LEGAL);
 
 
         when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
@@ -1942,7 +2108,7 @@ class StreamsServiceImplTest {
 
 
         //WHEN
-        StreamMetadataResponseV29 res = webhookService.updateEventStream(xpagopapnuid,xpagopacxid, null,xPagopaPnApiVersion, uuidd, Mono.just(req)).block(d);
+        StreamMetadataResponseV30 res = webhookService.updateEventStream(xpagopapnuid,xpagopacxid, null,xPagopaPnApiVersion, uuidd, Mono.just(req)).block(d);
 
         //THEN
         assertNotNull(res);
@@ -1958,11 +2124,12 @@ class StreamsServiceImplTest {
         String xpagopapnuid = "PA-xpagopapnuid";
         String xPagopaPnApiVersion="v23";
         String entityVersion="v23";
-        StreamRequestV29 req = new StreamRequestV29();
+        StreamRequestV30 req = new StreamRequestV30();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV29.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV30.EventTypeEnum.STATUS);
         req.setFilterValues(Arrays.asList("CCCC","DDDD"));
         req.setGroups(Arrays.asList("gruppo1","gruppo2"));
+        req.setCommunicationType(StreamRequestV30.CommunicationTypeEnum.LEGAL);
 
         UUID uuidd = UUID.randomUUID();
         String uuid = uuidd.toString();
@@ -1975,6 +2142,7 @@ class StreamsServiceImplTest {
         entity.setVersion(entityVersion);
         entity.setGroups(Arrays.asList("gruppo1","gruppo2"));
         entity.setFilterValues(new HashSet<>(Arrays.asList("AAAA","BBBB")));
+        entity.setCommunicationType(CommunicationType.LEGAL);
 
 
         when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
@@ -1984,7 +2152,7 @@ class StreamsServiceImplTest {
 
         //WHEN
         List<String> requestGroups = Collections.emptyList();
-        StreamMetadataResponseV29 res = webhookService.updateEventStream(xpagopapnuid,xpagopacxid, requestGroups,xPagopaPnApiVersion, uuidd, Mono.just(req)).block(d);
+        StreamMetadataResponseV30 res = webhookService.updateEventStream(xpagopapnuid,xpagopacxid, requestGroups,xPagopaPnApiVersion, uuidd, Mono.just(req)).block(d);
 
         //THEN
         assertNotNull(res);
@@ -1996,9 +2164,9 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamRequestV29 req = new StreamRequestV29();
+        StreamRequestV30 req = new StreamRequestV30();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV29.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV30.EventTypeEnum.STATUS);
         req.setFilterValues(null);
 
         UUID uuidd = UUID.randomUUID();
@@ -2017,7 +2185,7 @@ class StreamsServiceImplTest {
 
 
         //WHEN
-        Mono<StreamMetadataResponseV29> res = webhookService.updateEventStream(xpagopapnuid,xpagopacxid, Collections.emptyList(),null, uuidd, Mono.just(req));
+        Mono<StreamMetadataResponseV30> res = webhookService.updateEventStream(xpagopapnuid,xpagopacxid, Collections.emptyList(),null, uuidd, Mono.just(req));
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
         //THEN
         assertNotNull(res);
@@ -2029,9 +2197,9 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamRequestV29 req = new StreamRequestV29();
+        StreamRequestV30 req = new StreamRequestV30();
         req.setTitle("titolo nuovo");
-        req.setEventType(StreamRequestV29.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV30.EventTypeEnum.STATUS);
         req.setFilterValues(null);
         req.setGroups(Collections.emptyList());
 
@@ -2052,7 +2220,7 @@ class StreamsServiceImplTest {
 
 
         //WHEN
-        Mono<StreamMetadataResponseV29> res = webhookService.updateEventStream(xpagopapnuid,xpagopacxid, List.of("gruppo1"),null, uuidd, Mono.just(req));
+        Mono<StreamMetadataResponseV30> res = webhookService.updateEventStream(xpagopapnuid,xpagopacxid, List.of("gruppo1"),null, uuidd, Mono.just(req));
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
         //THEN
         assertNotNull(res);
@@ -2064,11 +2232,12 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamRequestV29 req = new StreamRequestV29();
+        StreamRequestV30 req = new StreamRequestV30();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV29.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV30.EventTypeEnum.STATUS);
         req.setFilterValues(null);
         req.setGroups(Collections.emptyList());
+        req.setCommunicationType(StreamRequestV30.CommunicationTypeEnum.LEGAL);
 
         UUID uuidd = UUID.randomUUID();
         String uuid = uuidd.toString();
@@ -2081,13 +2250,14 @@ class StreamsServiceImplTest {
         entity.setActivationDate(Instant.now());
         entity.setGroups(null);
         entity.setVersion(null);
+        entity.setCommunicationType(CommunicationType.LEGAL);
 
 
         when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
 
 
-        Mono<StreamMetadataResponseV29> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Collections.singletonList("gruppo1"),"v10", uuidd, Mono.just(req));
+        Mono<StreamMetadataResponseV30> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Collections.singletonList("gruppo1"),"v10", uuidd, Mono.just(req));
         assertDoesNotThrow(() -> mono.block(d));
 
         //THEN
